--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,19 @@
 	<groupId>cc.ww</groupId>
 	<artifactId>owl</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
 	<name>owl</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
+		<dubbo.version>2.2.2</dubbo.version>
 	</properties>
+
+	<modules>
+		<module>consumer</module>
+		<module>provider</module>
+	</modules>
 
 	<dependencies>
 		<dependency>
@@ -31,13 +38,24 @@
 		</dependency>
 	</dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>cc</groupId>
+				<artifactId>ww</artifactId>
+				<version>${dubbo.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
+	<!--该插件的作用是打一个可运行的包,必须要写在需要打包的项目里.这里的父模块不需要打包运行,所以删掉该插件.-->
+	<!--<build>-->
+		<!--<plugins>-->
+			<!--<plugin>-->
+				<!--<groupId>org.springframework.boot</groupId>-->
+				<!--<artifactId>spring-boot-maven-plugin</artifactId>-->
+			<!--</plugin>-->
+		<!--</plugins>-->
+	<!--</build>-->
 
 </project>
